=======
CHANGES
=======

0.4.2p4
------
- sql
    - added "ilike()" operator to column operations. 
      compiles to ILIKE on postgres, lower(x) LIKE lower(y)
      on all others [ticket:727]
      
- orm
    - proper error message is raised when trying to access
      expired instance attributes with no session present

    - added a mapper() flag "eager_defaults"; when set to
      True, defaults that are generated during an INSERT or
      UPDATE operation are post-fetched immediately, instead
      of being deferred until later.  This mimics the old 0.3
      behavior.
    
    - query.join() can now accept class-mapped attributes
      as arguments, which can be used in place or in any
      combination with strings.  In particular this allows 
      construction of joins to subclasses on a polymorphic 
      relation, i.e. 
      query(Company).join(['employees', Engineer.name]), 
      etc.
      
    - general improvements to the behavior of join() in 
      conjunction with polymorphic mappers, i.e. joining
      from/to polymorphic mappers and properly applying 
      aliases.  
      
    - fixed/improved behavior when a mapper determines the
      natural "primary key" of a mapped join, it will more 
      effectively reduce columns which are equivalent via
      foreign key relation.  This affects how many arguments 
      need to be sent to query.get(), among other things.
      [ticket:933]
      
    - fixed bug in polymorphic inheritance which made it 
      difficult to set a working "order_by" on a polymorphic
      mapper
    
    - fixed a rather expensive call in Query that was slowing
      down polymorphic queries
        
- general
    - warnings are now issued as type exceptions.SAWarning.

- dialects
    - finally added PGMacAddr type to postgres [ticket:580]

    - reflect the sequence associated to a PK field (tipically
      with a BEFORE INSERT trigger) under Firebird

0.4.2p3
------
- general